fix navbar styling on mobile

--- a/less/site.less
+++ b/less/site.less
@@ -753,6 +753,20 @@ h4 {
   width: 100%;
 }
 
+.navbar-header {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.navbar-toggle {
+  .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+  }
+}
+
 .navbar-nav > li > span {
     padding-top: 10px;
     padding-bottom: 10px;
